# ninetails

./: CMakeLists.txt  NTConstant.h  NTMacro.h  README.md  main.cpp  ninetails  ninetails.h  setup.sh  学习记录.txt
data/: CMakeLists.txt  Color.cpp  Color.h  FileUtils.cpp  FileUtils.h  Makefile  Vec.cpp  Vec.h  Vec_Color.cpp  Vec_Color.h
event/: CMakeLists.txt  EventBase.cpp  EventBase.h  EventKeyBoard.cpp  EventKeyBoard.h  EventManager.cpp  EventManager.h  EventMouse.cpp  EventMouse.h  Makefile  cmake_install.cmake
example/: CMakeLists.txt  Makefile  example1.cpp  example1.h  example2.cpp  example2.h
image/: CMakeLists.txt  Image.cpp  Image.h  Makefile  ntlibpng.h  stb_image.cpp
lib/glew/include/: glxew.h
lib/glew/prebuild/: libGLEW.2.1.0.dylib
object/: CMakeLists.txt  Makefile  NTObject.cpp  NTObject.h  cmake_install.cmake
shader/: CMakeLists.txt  LoadShaders.cpp  LoadShaders.h  Makefile  cmake_install.cmake
shader/script/: example1.frag  example1.vert  example2.frag  example2.vert  triangles.frag  triangles.vert
window/: CMakeLists.txt  Makefile  Window.cpp  Window.h
